[package]
name = "rs-mqtt2jsons"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[dependencies.futures]
version = "0.3.31"
default-features = false
features = [
	"async-await",
	"executor",
	"std",
]

[dependencies.rumqttc]
version = "0.24.0"
default-features = false
features = [
	"use-rustls",
]
